samples/_failures_safe/1761698495_d64810_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a06433a.c:158:17: error: expected declaration specifiers or ‘...’ at end of input
  158 | void bfs(struct Graph* graph,
      |                 ^~~~~
